# ServerClient-Tutorial

./: .gitignore
UdpClient/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  udpclient.cpp  udpclient.h
UdpServer/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  udpserver.cpp  udpserver.h
